# e-syon

./: .gitignore  Klada.py  README.md  RocenkaImpl.py  Skalper.py  api.py  main.py  pyproject.toml
oris/: Oris.py  constants.py  oris_docs.txt
pgp/: BaseCalculator.py  Klada.py  Obeslo.py  Ranking.py  RocenkaImpl.py  Skalper.py  util.py
utils/: util.py
